# paper2pod

./: .env.example  .gitignore  README.md  SPEC.md  config.yaml  postman_collection.json  pyproject.toml
paper2pod/: __init__.py  cli.py  config.py  db.py  logging_setup.py  parser.py  pdf.py  pipeline.py  storage.py  transcript.py
paper2pod/api/: __init__.py  app.py  auth.py  jobs.py  routes.py
paper2pod/sources/: __init__.py  openlabs.py
paper2pod/tts/: __init__.py  base.py  edge.py  elevenlabs.py
supabase/: schema.sql
tests/: test_api_jobs.py  test_api_routes.py  test_cli_episodes.py  test_config.py  test_cta.py  test_db.py  test_integration.py  test_integration_episodes.py  test_integration_openlabs.py  test_logging_setup.py  test_parser.py  test_pdf.py  test_pipeline.py  test_sources_openlabs.py  test_storage.py  test_transcript.py  test_tts.py
tests/fixtures/: frontmatter.md  heading_only.md  no_title.md  openlabs_project.json  sample_paper.md
