[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper2pod"
version = "0.1.0"
description = "Convert a research paper markdown file into a narrated, uploaded audio recording."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "anthropic>=0.34",
    "openai>=1.40",
    "edge-tts==7.2.8",
    "supabase>=2.6",
    "tenacity>=8.5",
    "python-dotenv>=1.0",
]

[project.scripts]
paper2pod = "paper2pod.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["paper2pod"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
